[workspace]
resolver = "3"
members = ["crates/chord"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Leonardo Lopes Pereira <leonardolopespereira@outlook.com>"]
repository = "https://github.com/llp-dev/chord"
readme = "README.md"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace.dependencies]
sel4 = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
