[package]
name = "chord"
description = "A proof-of-concept for seL4 userland development in Rust"
readme.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["sel4", "microkernel", "root-task"]
categories = ["os", "embedded", "no-std"]

[dependencies]
sel4.workspace = true
talc = "5.0"
spinning_top = "0.3"

[build-dependencies]
cc = "1.2"

[lints]
workspace = true
